# AllajnahEnhancedverion2

./: .env.example  .env.example.production  .gitignore  .replit  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION.md  FRONTEND_CHANGELOG.md  INSTALLATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PRODUCTION_OPTIMIZATION_SUMMARY.md  PRODUCTION_READINESS.md  PROFILE_UPLOAD_TEST_GUIDE.md  PROJECT_STATUS.md  QA_CHECKLIST.md  QUICKSTART.md  README.md  RUN.md  SETUP_GUIDE.md  SYSTEM_FIXES_CHANGELOG.md  SYSTEM_VERIFICATION_REPORT.md  TESTING.md  TESTING_CATEGORIES.md  TESTING_RESULTS.md  allajnah-backend.service  backup-db.sh  docker-compose.yml  install-local.sh  logrotate.conf  nginx-production.conf  package-lock.json  package.json  pyproject.toml  replit.md  test_system_comprehensive.py  كيفية_اختبار_التصنيفات.md
attached_assets/: Pasted--HIGH-PRIORITY-Security-Reliability-1-Environment-Variables-for-Production-Currently-using--1761873456211_1761873456211.txt  Pasted--Next-Gen-User-Experience-Neumorphism-Gl-1761942019025_1761942019027.txt  Pasted--What-s-Working-Frontend-redesign-is-clearly-applied-Tailwind-tokens-unified-UI-RTL-layout-and-1762137544709_1762137544711.txt  Pasted-Build-a-full-stack-web-app-from-scratch-called-Allajnah-Enhanced-a-complaint-management-system--1761850494326_1761850494327.txt  Pasted-Repository-to-work-on-use-this-exact-codebase-do-NOT-start-a-new-project-https-github-com-gen-1761866762311_1761866762311.txt  استمارة تقديم شكوى _1761870732448.docx  (+5 more)
backend/: .env.example  .gitignore  Dockerfile  add_indexes.py  audit_helper.py  (+34 more)
(+110 files in other folders)
